// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbortError should initialize with given reason 1`] = `[AbortError: test reason]`;

exports[`AbortError should initialize with given reason 2`] = `
{
  "code": "ABORT_ERR",
  "detail": {
    "detail": "issue",
  },
  "name": "AbortError",
}
`;

exports[`InvalidStateError should initialize with given reason 1`] = `[InvalidStateError: test reason]`;

exports[`InvalidStateError should initialize with given reason 2`] = `
{
  "code": "INVALID_STATE_ERR",
  "detail": {
    "detail": "issue",
  },
  "name": "InvalidStateError",
}
`;

exports[`NotFoundError should initialize with given reason 1`] = `[NotFoundError: test reason]`;

exports[`NotFoundError should initialize with given reason 2`] = `
{
  "code": "NOT_FOUND_ERR",
  "detail": {
    "detail": "issue",
  },
  "name": "NotFoundError",
}
`;

exports[`NotSupportedError should initialize with given reason 1`] = `[NotSupportedError: test reason]`;

exports[`NotSupportedError should initialize with given reason 2`] = `
{
  "code": "NOT_SUPPORTED_ERR",
  "detail": {
    "detail": "issue",
  },
  "name": "NotSupportedError",
}
`;

exports[`OperationError should initialize with given reason 1`] = `[OperationError: test reason]`;

exports[`OperationError should initialize with given reason 2`] = `
{
  "code": "ERR_OPERATION_FAILED",
  "detail": {
    "detail": "issue",
  },
  "name": "OperationError",
}
`;

exports[`OperationError should initialize with given reason and code 1`] = `[OperationError: test reason]`;

exports[`OperationError should initialize with given reason and code 2`] = `
{
  "code": "TEST_ERR",
  "detail": {
    "detail": "issue",
  },
  "name": "OperationError",
}
`;

exports[`TimeoutError should initialize with given reason 1`] = `[TimeoutError: test reason]`;

exports[`TimeoutError should initialize with given reason 2`] = `
{
  "code": "TIMEOUT_ERR",
  "detail": {
    "detail": "issue",
  },
  "name": "TimeoutError",
}
`;
